--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">FinalProject</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="confirm_password">Confirm Password:</string>
+    <string name="enter_valid_password">Enter Valid Password</string>
+    <string name="password">Password:</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="enter_full_name">Enter Full Name</string>
+    <string name="enter_valid_email">Enter Valid Email</string>
+    <string name="email">Email:</string>
+    <string name="full_name">Full Name:</string>
 </resources>
