--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="enter_valid_email">Enter Valid Email</string>
     <string name="email">Email:</string>
     <string name="full_name">Full Name:</string>
+    <string name="login">Login</string>
 </resources>
