12/7 added button to switch between calendar and options

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="featured">Featured</string>
     <string name="feed">Your feed</string>
     <string name="login">Login</string>
+    <string name="calendar">Calendar</string>
+    <string name="back_to_options">Back to Options</string>
 
 </resources>
