--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,9 @@
     <string name="login">Login</string>
     <string name="calendar">Calendar</string>
     <string name="back_to_options">Back to Options</string>
+    <string name="logout">Logout</string>
+    <string name="add_event">Add Event</string>
+    <string name="see_profile">See Profile</string>
+    <string name="welcome">Welcome</string>
 
 </resources>
