--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,10 @@
     <string name="add_event">Add Event</string>
     <string name="see_profile">See Profile</string>
     <string name="welcome">Welcome</string>
+    <string name="name">Name</string>
+    <string name="organization">Organization:</string>
+    <string name="event_date">Event Date:</string>
+    <string name="event_time">Event Time:</string>
+    <string name="event_address">Event Address:</string>
 
 </resources>
